--- a/style.css
+++ b/style.css
@@ -175,3 +175,22 @@ body {
     color: var(--cyan);
     cursor: pointer;
 }
+
+/**** Responsive design version mobile ****/
+
+@media screen and (max-width: 435px) {
+    .card {
+        max-width: 85%;
+        padding: 18px;
+    }
+
+    .card__container__details div {
+        width: 33%;
+        font-size: 15px;
+    }
+
+    .card__container__images {
+        width: 100%;
+        height: 280px;
+    }
+}
