--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ body {
     position: relative;
     width: 100%;
     height: 360px;
-    transition: opacity 0 .3s ease-in-out,
-        cursor 0.3s ease-in-out,
+    transition: opacity 0.3s ease-in-out,
+        cursor 0.3s ease-in-out;
 }
 
 .card__container__images,
